--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Database details
-spring.datasource.url=jdbc:mysql://healthmanagement.ctcrvq2jq1gx.ap-south-1.rds.amazonaws.com:3306/HealthManagement_db
+#spring.datasource.url=jdbc:mysql://healthmanagement.ctcrvq2jq1gx.ap-south-1.rds.amazonaws.com:3306/HealthManagement_db
+spring.datasource.url=jdbc:mysql://localhost:3306/HealthManagement_db
 spring.datasource.username=root
 spring.datasource.password=Afghanistan
 
@@ -12,8 +13,8 @@ spring.datasource.test-while-idle=true
 spring.datasource.validation-interval=5000
 
 
-spring.rabbitmq.host=15.207.20.153
-spring.rabbitmq.port=5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.reply.timeout=60000
