--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.url=jdbc:mysql://healthmanagement.ctcrvq2jq1gx.ap-south-1.rds.amazonaws.com:3306/HealthManagement_db
 spring.datasource.url=jdbc:mysql://localhost:3306/HealthManagement_db
 spring.datasource.username=root
-spring.datasource.password=Afghanistan
+spring.datasource.password=root
 
 # JPA Details
 spring.jpa.show-sql=true
