--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Database details
 #spring.datasource.url=jdbc:mysql://healthmanagement.ctcrvq2jq1gx.ap-south-1.rds.amazonaws.com:3306/HealthManagement_db
-spring.datasource.url=jdbc:mysql://localhost:3306/healthanagement
+spring.datasource.url=jdbc:mysql://localhost:3306/heathmanagement
 spring.datasource.username=root
 spring.datasource.password=root
 
