--- a/application.properties
+++ b/application.properties
@@ -13,8 +13,8 @@ spring.datasource.test-while-idle=true
 spring.datasource.validation-interval=5000
 
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=15672
+spring.rabbitmq.host=65.2.153.151
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.reply.timeout=60000
