--- a/gatewayService.properties
+++ b/gatewayService.properties
@@ -1,1 +1,7 @@
+server.port=9900
 
+#Eureka details
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka = true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
